feat: allow formatting of mjml files

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
                     "ftl"
                 ],
                 "extensions": [
-                    ".ftl"
+                    ".ftl",
+                    ".mjml"
                 ],
                 "configuration": "./ftl.configuration.json"
             }
